TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/Success_Story__c.object-meta.xml
<CustomObject>
    <description>Track technical enablement stories</description>
    <label>Success Story</label>
    <nameField>
        <label>Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>