TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <description>How the success story was shared</description>
    <inlineHelpText>How the success story was shared</inlineHelpText>
    <label>Distribution</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Distribution</valueSetName>
    </valueSet>
</CustomField>