TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Line_to_Deck__c.field-meta.xml
<CustomField>
    <fullName>Line_to_Deck__c</fullName>
    <inlineHelpText>Provide a link to a Quip or gDoc presentation</inlineHelpText>
    <label>Link to Deck</label>
    <type>Url</type>
</CustomField>