TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Link_to_recording__c.field-meta.xml
<CustomField>
    <fullName>Link_to_recording__c</fullName>
    <inlineHelpText>Link to a recording of the success story</inlineHelpText>
    <label>Link to recording</label>
    <type>Url</type>
</CustomField>