TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <inlineHelpText>Org62 Account or Opportunity Link</inlineHelpText>
    <label>Account/Opportunity Link</label>
    <type>Url</type>
</CustomField>