TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Partner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>