TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/PDO_Involved__c.field-meta.xml
<CustomField>
    <fullName>PDO_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was a PDO involved</inlineHelpText>
    <label>PDO Involved</label>
    <type>Checkbox</type>
</CustomField>