TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Presented_on_All_Hands_Call__c.field-meta.xml
<CustomField>
    <fullName>Presented_on_All_Hands_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the Story presented on an AppExchange All Hands Call</inlineHelpText>
    <label>Presented on All Hands Call</label>
    <type>Checkbox</type>
</CustomField>