TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Presented_on_TE_Call__c.field-meta.xml
<CustomField>
    <fullName>Presented_on_TE_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the story presented on a Friday Team Call</inlineHelpText>
    <label>Presented on TE Call</label>
    <type>Checkbox</type>
</CustomField>