TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Primary_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contributor</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Success Stories</relationshipLabel>
    <relationshipName>Success_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>