TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Secondary_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Contributor</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Success Stories (Secondary Contributor)</relationshipLabel>
    <relationshipName>Success_Stories2</relationshipName>
    <type>Lookup</type>
</CustomField>