TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/fields/Technologies_Used__c.field-meta.xml
<CustomField>
    <fullName>Technologies_Used__c</fullName>
    <inlineHelpText>Select any technologies that apply</inlineHelpText>
    <label>Technologies Represented</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Technologies</valueSetName>
    </valueSet>
</CustomField>