TEBuildOrg-Project/force-app/main/default/objects/Success_Story__c/listViews/All_Success_Stories.listView-meta.xml
<ListView>
    <fullName>All_Success_Stories</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Presented_on_TE_Call__c</columns>
    <columns>Presented_on_All_Hands_Call__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Success Stories</label>
</ListView>